# seraphim

./: .gitignore  189  Cargo.toml  README.md  attach  attach_train  best_practices.md  build.rs  develop  docker-compose.auto.yml  docker-compose.yml  examples.pb  hist.csv  hist2.csv  hist3  hist4.csv  interactive  learn  log  main  saved_model  todo.md
go/: Cargo.toml  build.rs
go/src/: lib.rs  main.rs  mod.rs
go/src/gosfg/: mod.rs  parse_sgf.lalrpop
go/test/: game189_expectation  game95_moves.json
gosgf/: Cargo.toml
gosgf/src/: gosgf.rs  lib.rs  main.rs  parse_sgf.lalrpop  parse_sgf.rs  sgf.rs
play/: Base.dockerfile  Dockerfile  Dockerfile.bak  Dockerfile.full  bashrc  cuda.dockerfile  nogpu.dockerfile  notf.dockerfile  test.dockerfile
sgf/: Cargo.toml
sgf/src/: parse_sgf.lalrpop  sgf.rs
src/: error.rs  game.rs  generate.rs  inference.rs  interactive.rs  lib.rs  main.rs  search.rs
src/core/: mod.rs  pos.rs
src/evaluation/: interactive.rs
src/go/: mod.rs
src/go/test/: game189_moves.json  game95_expectation
src/io/: mod.rs  tf.rs
src/io/testing/: golden_writer.py  test_writer.rs
src/search/: mod.rs
src/tictactoe/: expert.rs  export_graph.py  init.py  load_graph.py  mod.rs  simple_net.pb  simple_net.py  simple_net.rs  state.rs  train.py
src/tictactoe/gamedata/: game1
src/tictactoe/models/bar/checkpoints/: checkpoint  model-1746.data-00000-of-00001  model-1747.data-00000-of-00001  model-1747.index  model-1748.data-00000-of-00001  model-1748.index  model-1749.data-00000-of-00001  (+5 more)
src/tictactoe/saved_models/: 01.data-00000-of-00001  01.index  baz-0.data-00000-of-00001  baz-0.index  checkpoint
src/tictactoe/saved_models/baf/: baf-0.data-00000-of-00001  baf-0.index  baf-151.data-00000-of-00001  baf-151.index  baf-152.data-00000-of-00001  baf-152.index  baf-153.data-00000-of-00001  baf-153.index  baf-154.data-00000-of-00001  baf-154.index  baf-155.data-00000-of-00001  baf-155.index  baf-156.data-00000-of-00001  baf-156.index  baf-221.data-00000-of-00001  baf-221.index  baf-222.data-00000-of-00001  baf-222.index  baf-223.data-00000-of-00001  baf-223.index  baf-224.data-00000-of-00001  baf-224.index  baf-225.data-00000-of-00001  baf-225.index  baf-291.data-00000-of-00001  baf-291.index  baf-292.data-00000-of-00001  baf-292.index  baf-293.data-00000-of-00001  baf-293.index  baf-294.data-00000-of-00001  baf-294.index  baf-295.data-00000-of-00001  baf-295.index  baf-361.data-00000-of-00001  baf-361.index  baf-362.data-00000-of-00001  baf-362.index  baf-363.data-00000-of-00001  baf-363.index  (+34 more)
src/tictactoe/saved_models/bar/: bar-0.data-00000-of-00001  bar-0.index  checkpoint
src/tictactoe/saved_models/foo/: checkpoint  foo-0.data-00000-of-00001  foo-0.index
src/tictactoe/simple_model/: .data-00000-of-00001  .index
src/tictactoe/simple_model_01/: .data-00000-of-00001  .index
src/tictactoe/testing/: mod.rs  naive_game_player.rs
tictactoe/gamedata/graphlog/: events.out.tfevents.1527551065.mason-Z97-D3H
train/: Dockerfile
(+110 files in other folders)
