[package]
name = "seraphim"
version = "0.1.0"
authors = ["Mason Kramer <mason.kramer@gmail.com>"]
build = "build.rs"

[dependencies]
left-pad = "1.0.0"
regex = "0.2.0"
clippy = { version = "*", optional = true }
vec_map = "*"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_error"] }
flexi_logger = "*"
petgraph = "*"
rand = "*"
lazy_static = "*"
tensorflow = "*"
clap = "*"
ctrlc = { version = "*", features = ["termination"] }
protobuf = "*"

[profile.release]
lto = true

[profile.bench]
lto = true

[profile.dev]
opt-level = 2
codegen-units = 4

[build-dependencies]
protoc-rust = "*"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_error"] }
flexi_logger = "*"
