[package]
authors = ["Mason Kramer <mason.kramer@gmail.com>"]
build = "build.rs"
name = "seraphim"
version = "0.1.0"
[build-dependencies]
flexi_logger = "*"
protoc-rust = "*"

[build-dependencies.log]
features = ["max_level_trace", "release_max_level_error"]
version = "0.4"

[dependencies]
bincode = "*"
byteorder = "*"
clap = "*"
crc32c = "*"
failure = "*"
fallible-iterator = "*"
flexi_logger = "*"
fs2 = "*"
lazy_static = "*"
left-pad = "1.0.0"
petgraph = "*"
protobuf = "*"
rand = "0.6"
regex = "0.2.0"
retry = "*"
structopt = "*"
vec_map = "*"

[dependencies.clippy]
optional = true
version = "*"

[dependencies.ctrlc]
features = ["termination"]
version = "*"

[dependencies.log]
features = ["max_level_trace", "release_max_level_error"]
version = "0.4"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dependencies.tensorflow]
version = "0.12.0"

[profile]
[profile.bench]
lto = true

[profile.dev]
codegen-units = 4

[profile.release]
lto = true
